@@ -236,7 +236,13 @@ because of Phabricator reports.
 * LanguageConverterFactory::isTitleConversionDisabled(), deprecated in 1.36,
   now emits deprecation warnings.
 * AbstractBlock::getPermissionsError(), deprecated in 1.35, now emits
- deprecation warnings.
+  deprecation warnings.
+* The following functions are deprecated: isBlockedGlobally, getGlobalBlock.
+  Use getBlock instead.
+* The UserIsBlockedGlobally hook is deprecated.
+  Use GetUserBlockHook instead.
+* The SystemBlock type global-block is deprecated.
+  GlobalBlocks are now added into CompositeBlocks via the GetUserBlock hook.
 * …
 
 === Other changes in 1.40 ===
